docs: Add REPLICATE_API_TOKEN to .env.example

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ PINECONE_ENVIRONMENT=us-east-1
 # === ComfyUI ===
 COMFYUI_BASE_URL=http://localhost:8188
 
+# === Replicate (for POC model comparison) ===
+REPLICATE_API_TOKEN=your_replicate_api_token
+
 # === Instagram ===
 INSTAGRAM_APP_ID=your_meta_app_id
 INSTAGRAM_APP_SECRET=your_meta_app_secret
